k8s/namespace.yaml
apiVersion: v2
kind: Namespace
metadata:
  name: nephos
