k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: nephos
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type, Accept, X-Correlation-ID"
    nginx.ingress.kubernetes.io/proxy-body-size: "5G"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  rules:
    - http:
        paths:
          - path: /api/*/auth*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /api/*/files*
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 8000
          - path: /api/*/folders*
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 8000
          - path: /api/*/share*
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 8000
          - path: /api/*/trash*
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 8000
          - path: /api/*/storage*
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 8000
          - path: /api/*/health/auth*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /api/*/health/storage*
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 8000
